Fix masthead-l on mobile

--- a/stylesheets/speakers.scss
+++ b/stylesheets/speakers.scss
@@ -204,7 +204,7 @@ div.play-symbol {
   .masthead-l .masthead-header {
     text-shadow: 0px 0px 3px rgba(0,0,0,0.6);
   }
-  .masthead-l .masthead h1 {
+  .masthead-l h1.page-title {
     color: white;
   }
 
